# AI-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: kernel_bench.yml  lint.yml  test.yml
ai_bench/harness/core/: __init__.py  specs.py
ai_bench/harness/runner/: kernel_bench_runner.py
ai_bench/harness/testing/: timer.py
ai_bench/utils/: __init__.py  finder.py  importer.py
backends/triton/KernelBench/level1/: 16_Matmul_with_transposed_A.py
backends/triton/KernelBench/level2/: 81_Gemm_Swish_Divide_Clamp_Tanh_Clamp.py  85_Conv2d_GroupNorm_Scale_MaxPool_Clamp.py  99_Matmul_GELU_Softmax.py
infra/scripts/: ci-xpu-run-kernel-bench.sh  run_kernel_bench.py
problems/specs/KernelBench/level1/: 10_3D_tensor_matrix_multiplication.yaml  11_4D_tensor_matrix_multiplication.yaml  12_Matmul_with_diagonal_matrices_.yaml  16_Matmul_with_transposed_A.yaml  17_Matmul_with_transposed_B.yaml  18_Matmul_with_transposed_both.yaml  19_ReLU.yaml  1_Square_matrix_multiplication_.yaml  20_LeakyReLU.yaml  2_Standard_matrix_multiplication_.yaml  3_Batched_matrix_multiplication.yaml  4_Matrix_vector_multiplication_.yaml  5_Matrix_scalar_multiplication.yaml  6_Matmul_with_large_K_dimension_.yaml  7_Matmul_with_small_K_dimension_.yaml  8_Matmul_with_irregular_shapes_.yaml  9_Tall_skinny_matrix_multiplication_.yaml
problems/specs/KernelBench/level2/: 12_Gemm_Multiply_LeakyReLU.yaml  14_Gemm_Divide_Sum_Scaling.yaml  1_Conv2D_ReLU_BiasAdd.yaml  81_Gemm_Swish_Divide_Clamp_Tanh_Clamp.yaml  85_Conv2d_GroupNorm_Scale_MaxPool_Clamp.yaml  97_Matmul_BatchNorm_BiasAdd_Divide_Swish.yaml  98_Matmul_AvgPool_GELU_Scale_Max.yaml  99_Matmul_GELU_Softmax.yaml  (+1 more)
tests/: test_backend.py
(+8 files in other folders)
