[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-bench"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "PyYAML",
  "numpy",
]

[dependency-groups]
dev = [
  "ruff==0.14.5",
  "pre-commit",
]

[project.optional-dependencies]
torch_cpu = [
  "torch==2.9.1+cpu"
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_bench"]

[tool.setuptools.dynamic]
version = {attr = "ai_bench.__version__"}

[tool.ruff]
src = ["AI-bench"]
target-version = "py310"
line-length = 88

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
preview = true
select = [
  "D419", # empty-docstring
  "E", # Error
  "F", # Pyflakes
  "I", # isort
  "N801", # invalid-class-name
  "N804", # cls for class methods
  "N805", # self for methods
  "N818", # error-suffix-on-exception-name
  "N999", # invalid-module-name
  "PERF", # Perflint
  "RUF022", # __all__ is not sorted
  "RUF030", # print() call in assert
  "RUF034", # useless if-else
  "RUF047", # empty else
  "RUF200", # invalid pyproject.toml
  "W", # Warning
]
ignore = [
    "E501", # line-too-long
    "PERF203", # try-except-in-loop
    "PERF401", # manual-list-comprehension
]

[tool.ruff.lint.isort]
known-local-folder = ["ai_bench"]
known-third-party = ["torch"]
known-first-party = ["mlir"]
force-single-line = true  # Improves merge conflicts
force-sort-within-sections = true
